[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lcg-framework"
description = "LCG — Python library for content abstraction and multi-format document processing"
dynamic = ["version"]
authors = [
    { name = "Tomas Cerha", email = "cerha@truecode.cz" },
    { name = "Milan Zamazal", email = "pdm@zamazal.org" },
]
license = { file = "COPYING" }
readme = "readme.md"
requires-python = ">=2.7"
classifiers = [
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.5",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
]
dependencies = [
    "future",
    "pygments",
    "pillow",
]

[project.optional-dependencies]
# PDF output
pdf = ["reportlab"]
# Plot support (cairo/pycairo only used if  allow_svg is False
plot = ["matplotlib", "pandas", "svglib", "cairosvg==0.5", "pycairo"]
# liblouis is used for Braille output.
braille = ["louis"]
# Convenience: install all optional dependencies except for "louis" as this one
# is not as simple as pip install...
all = [
    "reportlab",
    "matplotlib",
    "pandas",
    "svglib",
    "cairosvg==0.5",
    "pycairo",
]

[tool.flit.module]
name = "lcg"

[tool.flit.sdist]
include = [
    "COPYING",
    "lcg/translations/**/**.mo",
    "lcg/resources/**",
    "lcg/**/test.py",  # Include in sdist even if excluded in .flitignore
]

